<resources>
    <string name="app_name">TechnoFarm</string>
    <string name="entercity">Enter city</string>
    <string name="getweather">Get Weather</string>
    <string name="qrscanner">QR Scanner</string>
    <string name="all">All</string>
    <string name="bajra">Bajra</string>
    <string name="barley">Barley</string>
    <string name="corn">Corn</string>
    <string name="garlic">Garlic</string>
    <string name="greenpeas">Green Peas</string>
    <string name="oat">Oat</string>
    <string name="onion">Onion</string>
    <string name="potato">Potato</string>
    <string name="rice">Rice</string>
    <string name="tomato">Tomato</string>
    <string name="wheat">Wheat</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="crop">Crop</string>
    <string name="quantity">Quantity</string>
    <string name="kgs">kgs</string>
    <string name="price">Price</string>
    <string name="rs">₹</string>
    <string name="per_kg">per kg</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="adhaarScanner">Scan your Adhaar QR Code</string>
    <string name="weather">Weather</string>
    <string name="market">Market</string>
    <string name="news">News</string>


</resources>