<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btnWeather"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        android:text="@string/weather"/>
    <Button
        android:id="@+id/btnMarket"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        android:text="@string/market"/>
    <Button
        android:id="@+id/btnNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        android:text="@string/news"/>

</LinearLayout>